<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="zero">0</string>
    <string name="order_button_string">Order</string>
    <string name="price">Order Summary</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toppings">Toppings</string>
    <string name="first_topping">Whipped Cream</string>
    <string name="second_topping">Chocolate Cream</string>
    <string name="name_space">Please enter your name here</string>
    <string name="summary_name">Name: <xliff:g id="name" example="bob">%s</xliff:g></string>
    <string name="summary_quantity">Quantity: </string>
    <string name="summary_topping_one">Add Whipped Cream?</string>
    <string name="summary_topping_two">Add Chocolate Cream?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total">Total: $</string>
    <string name="thanks_message">Thank You</string>

</resources>
